--- a/indexStyle.css
+++ b/indexStyle.css
@@ -29,7 +29,7 @@ body {
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   padding: 10px 10%;
   background-color: #161b22;
