--- a/indexStyle.css
+++ b/indexStyle.css
@@ -23,66 +23,130 @@ body {
   font-family: "Poppins", sans-serif;
   justify-content: center;
   display: flex;
-  flex-direction: column
+  flex-direction: column;
+}
+
+header
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0 100px;
+    background: #161b22;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+header .logo
+{
+    color: #fff;
+    height: 50px;
+    line-height: 50px;
+    font-size: 24px;
+    float: left;
+    font-weight: bold;
+}
+
+header nav 
+{
+    float: right;
+
+}
+
+header nav ul
+{
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+header nav ul li
+{
+    list-style: none;
+}
+
+header nav ul li a
+{
+    height: 50px;
+    line-height: 50px;
+    padding: 0 20px;
+    color: #fff;
+    text-decoration: none;
+    display: block;
+}
+
+header nav ul li a:hover
+{
+    color: #fff;
+    background-color: #2196f3;
+}
+
+.menu-toggle
+{
+    color: #fff;
+    float: right;
+    line-height: 50px;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+}
+
+@media (max-width: 991px)
+{
+    header
+    {
+        padding: 0 20px;
+        z-index: 1;
+    }
+    .menu-toggle
+    {
+        display: block;
+    }
+    header nav
+    {
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 50px);
+        background: #333;
+        top: 50px;
+        left: -100%;
+        transition: 0.5s;
+    }
+    header nav.active
+    {
+        left: 0;
+    }
+    header nav ul
+    {
+        display: block;
+        text-align: center;
+    }
+
+    header nav ul li a 
+    {
+        border-bottom: 1px solid rgba(0,0,0,.2);
+    }
+    
 }
 
 
-header {
+
+
+.content {
+  margin-top: 60%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 10%;
-  background-color: #161b22;
   width: 100%;
-}
-
-.logo {
-  margin-right: auto;
-}
-
-.nav__links {
-  list-style: none;
-  display: flex;
-}
-
-.nav__links a,
-.cta,
-.overlay__content a {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  color: #edf0f1;
-  text-decoration: none;
-}
-
-.nav__links li {
-  padding: 0px 20px;
-}
-
-.nav__links li a {
-  transition: all 0.3s ease 0s;
-}
-
-.nav__links li a:hover {
-  color: #0088a9;
-}
-
-
-
-
-.container {
-  margin-top: 0%;
-  display: flex;
-  width: 70%;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: nowrap;
+  position: relative;
 }
 
 
 section
 {
-  position: relative;
-  min-height: 80vh;
+  display: flex;
+  width: 100%;
 }
 
 .banner
@@ -91,6 +155,7 @@ section
   justify-content: center;
   align-items: center;
   padding: 0 20px;
+  position: relative;
 }
 
 .banner .content    
@@ -113,7 +178,7 @@ section
 
 .banner .imgBx img
 {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -150,7 +215,8 @@ p
 
 .socialMedia
 {
-  position: absolute;
+  position: relative;
+  margin-top: 10%;
   bottom: 20px;
   display: flex;
 }
