--- a/MLstyle.css
+++ b/MLstyle.css
@@ -1,90 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
 
-header
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0 100px;
-    background: #161b22;
-    width: 100%;
-    box-sizing: border-box;
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 100px;
+  background: #161b22;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-header .logo
-{
-    color: #fff;
-    height: 50px;
-    line-height: 50px;
-    font-size: 24px;
-    float: left;
-    font-weight: bold;
+header .logo {
+  color: #fff;
+  height: 50px;
+  line-height: 50px;
+  font-size: 24px;
+  float: left;
+  font-weight: bold;
 }
 
-header nav 
-{
-    float: right;
-
+header nav {
+  float: right;
 }
 
-header nav ul
-{
-    margin: 0;
-    padding: 0;
-    display: flex;
+header nav ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
-header nav ul li
-{
-    list-style: none;
+header nav ul li {
+  list-style: none;
 }
 
-header nav ul li a
-{
-    height: 50px;
-    line-height: 50px;
-    padding: 0 20px;
-    color: #fff;
-    text-decoration: none;
-    display: block;
+header nav ul li a {
+  height: 50px;
+  line-height: 50px;
+  padding: 0 20px;
+  color: #fff;
+  text-decoration: none;
+  display: block;
 }
 
-header nav ul li a:hover
-{
-    color: #fff;
-    background-color: #2196f3;
+header nav ul li a:hover {
+  color: #fff;
+  background-color: #2196f3;
 }
 
-.menu-toggle
-{
-    color: #fff;
-    float: right;
-    line-height: 50px;
-    font-size: 24px;
-    cursor: pointer;
-    display: none;
+.menu-toggle {
+  color: #fff;
+  float: right;
+  line-height: 50px;
+  font-size: 24px;
+  cursor: pointer;
+  display: none;
 }
-
 
 body {
-    background-color: #0d1117;
-    font-size: 100%;
-    width: 100%;
-    height: 100%;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.03em;
-    align-items: center;
-    font-family: "Poppins", sans-serif;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  background-color: #0d1117;
+  font-size: 100%;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Heebo:400,700|Open+Sans:400,700');
+@import url("https://fonts.googleapis.com/css?family=Heebo:400,700|Open+Sans:400,700");
 
 :root {
   --color: #3c3163;
@@ -95,9 +85,40 @@ body {
   box-sizing: border-box;
 }
 
-
 a {
   color: inherit;
+}
+
+.intro {
+  margin: 0 auto;
+  padding: 4rem;
+  width: max-content;
+}
+
+.title {
+  color: white;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.title h2 {
+  position: relative;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 2em;
+}
+
+.title h2::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -10px;
+  width: 50px;
+  height: 1px;
+  background: white;
 }
 
 .cards-wrapper {
@@ -106,7 +127,7 @@ a {
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 4rem;
-  padding: 4rem;
+  padding: 1rem;
   margin: 0 auto;
   width: max-content;
 }
@@ -114,7 +135,11 @@ a {
 .card {
   /* font-family: 'Heebo'; */
   --bg-filter-opacity: 0.5;
-  background-image: linear-gradient(rgba(0,0,0,var(--bg-filter-opacity)),rgba(0,0,0,var(--bg-filter-opacity))), var(--bg-img);
+  background-image: linear-gradient(
+      rgba(0, 0, 0, var(--bg-filter-opacity)),
+      rgba(0, 0, 0, var(--bg-filter-opacity))
+    ),
+    var(--bg-img);
   height: 20em;
   width: 15em;
   font-size: 1.5em;
@@ -157,7 +182,7 @@ a {
 
 .card .tags .tag {
   font-size: 0.75em;
-  background: rgba(255,255,255,0.5);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 0.3rem;
   padding: 0 0.5em;
   margin-right: 0.5em;
@@ -177,11 +202,12 @@ a {
   font-size: 0.75em;
   padding: 1em;
   line-height: 1em;
-  opacity: .8;
+  opacity: 0.8;
 }
 
-.card:before, .card:after {
-  content: '';
+.card:before,
+.card:after {
+  content: "";
   transform: scale(0);
   transform-origin: top left;
   border-radius: 50%;
@@ -209,7 +235,8 @@ a {
   color: var(--color);
 }
 
-.card:hover:before, .card:hover:after {
+.card:hover:before,
+.card:hover:after {
   transform: scale(1);
 }
 
@@ -236,6 +263,32 @@ a {
   font-weight: normal;
 }
 
+.extra {
+  padding: 3rem;
+}
+
+.extraContent {
+  display: flex;
+  flex-direction: column;
+  padding: 3rem;
+  color: white;
+  text-align: justify;
+  align-items: center;
+  justify-content: center;
+}
+
+.extraContent .btn {
+  position: relative;
+  display: inline-block;
+  padding: 10px 30px;
+  background-color: #444;
+  color: #fff;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin-top: 10px;
+  text-decoration: none;
+}
+
 /* MEDIA QUERIES */
 @media screen and (max-width: 1285px) {
   .cards-wrapper {
@@ -253,6 +306,12 @@ a {
   .card-grid-space .num {
     margin-left: 0;
     text-align: center;
+  }
+  .title h2 {
+    font-size: 1.2em;
+  }
+  .extraContent {
+    font-size: 1em;
   }
 }
 
@@ -275,40 +334,32 @@ a {
   }
 }
 
-@media (max-width: 991px)
-{
-    header
-    {
-        padding: 0 20px;
-        z-index: 1;
-    }
-    .menu-toggle
-    {
-        display: block;
-    }
-    header nav
-    {
-        position: absolute;
-        width: 100%;
-        height: calc(100vh - 50px);
-        background: #333;
-        top: 50px;
-        left: -100%;
-        transition: 0.5s;
-    }
-    header nav.active
-    {
-        left: 0;
-    }
-    header nav ul
-    {
-        display: block;
-        text-align: center;
-    }
+@media (max-width: 991px) {
+  header {
+    padding: 0 20px;
+    z-index: 1;
+  }
+  .menu-toggle {
+    display: block;
+  }
+  header nav {
+    position: absolute;
+    width: 100%;
+    height: calc(100vh - 50px);
+    background: #333;
+    top: 50px;
+    left: -100%;
+    transition: 0.5s;
+  }
+  header nav.active {
+    left: 0;
+  }
+  header nav ul {
+    display: block;
+    text-align: center;
+  }
 
-    header nav ul li a 
-    {
-        border-bottom: 1px solid rgba(0,0,0,.2);
-    }
-    
+  header nav ul li a {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
 }
